[gd_scene load_steps=5 format=3 uid="uid://bj4b5buu4ywxv"]

[ext_resource type="PackedScene" uid="uid://eyiq2ysbdeo7" path="res://Player/Player.tscn" id="1_bsykb"]
[ext_resource type="Script" path="res://Monrogue.gd" id="1_ui7o4"]
[ext_resource type="Texture2D" uid="uid://c3rid011dv5j8" path="res://Map/Map.png" id="2_28j5l"]

[sub_resource type="Curve2D" id="Curve2D_skiru"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 2057, -178, 0, 0, 0, 0, 2095, 1310, 0, 0, 0, 0, -209, 1343, 0, 0, 0, 0, -227, -183)
}
point_count = 4

[node name="Monrogue" type="Node2D"]
position = Vector2(-4, 0)
script = ExtResource("1_ui7o4")

[node name="Tutorial" type="CanvasLayer" parent="."]
unique_name_in_owner = true
layer = -1

[node name="Map" type="Sprite2D" parent="Tutorial"]
position = Vector2(956, 629)
texture = ExtResource("2_28j5l")

[node name="TimerLabel" type="Label" parent="Tutorial"]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 60
text = "05:00"

[node name="Win" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="Win"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.14334, 0.14334, 0.14334, 1)

[node name="Label" type="Label" parent="Win"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "Você sobreviveu"

[node name="Lose" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="Lose"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="Lose"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "Você perdeu!"

[node name="Player" parent="." instance=ExtResource("1_bsykb")]
unique_name_in_owner = true
position = Vector2(998, 576)

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-990, -527)
curve = SubResource("Curve2D_skiru")

[node name="MobSpawner" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(2057, -178)
rotation = 1.54526

[node name="MobTimer" type="Timer" parent="Player/Path2D"]
unique_name_in_owner = true
autostart = true

[node name="GameTimer" type="Timer" parent="."]
unique_name_in_owner = true
autostart = true

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="Player/Path2D/MobTimer" to="." method="_on_mob_spawn_timer_timeout"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
